--- a/eProject/OnlineArtGallery/OnlineArtGallery/Views/Index/AuctionDetail.cshtml
+++ b/eProject/OnlineArtGallery/OnlineArtGallery/Views/Index/AuctionDetail.cshtml
@@ -84,8 +84,8 @@
         <div class="product-details-slider-top-wrapper">
             <div class="product-details-slider owl-theme owl-carousel" id="sync1">
                 <div class="slide-top-item">
-                    <div class="slide-inner">
-                        <img src="~/assets/img/artwork/@Auction.Artwork.Image" alt="product">
+                    <div class="slide-inner d-flex justify-content-center">
+                        <img src="~/assets/img/artwork/@Auction.Artwork.Image" alt="product" style="max-height:1200px;max-width:2000px;height:auto;width:auto;">
                     </div>
                 </div>
                 <!-- <div class="slide-top-item">
