--- a/eProject/OnlineArtGallery/OnlineArtGallery/Views/Index/MyFavorite.cshtml
+++ b/eProject/OnlineArtGallery/OnlineArtGallery/Views/Index/MyFavorite.cshtml
@@ -69,7 +69,8 @@
                                 </a>
                                 <h4>@item.Name</h4>
                                 <h5>@item.Artist.Name</h5>
-                                <p>@item.Description</p>
+                                @*<p>@item.Description</p>*@
+
                                 @if (auc != null)
                                 {
                                     <a href='/Index/auctiondetail?auctionId=@auc.Id'>Readmore</a>
